# picachu-emotion-service

./: Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
basic_model_binding/: messages_traffic_controller.py
core/: model_base.py  model_result_producer.py
emotion_model/: logic.py  model.py
model/: emotion_model.py
tests/: test_emotions.py
